--- a/final_project.html
+++ b/final_project.html
@@ -24,7 +24,7 @@
         <section id="about">
             <h1>About Me</h1>
             <p>Hi, I'm Shushant Sharma, a passionate software developer with a strong foundation in computer science and a drive to build innovative solutions.</p>
-            <img src="shushant.jpg" alt="Shushant Sharma">
+            <img src="Shushant Photo.jpg" alt="Shushant Sharma">
         </section>
         <section id="projects">
             <h1>Project Gallery</h1>
